# ExtensionCore

./: CMakeLists.txt
sub/Example/: CMakeLists.txt
sub/Extension/: CMakeLists.txt
sub/Extension/src/: main.cpp
sub/Extension/src/AbstractCoreExtension/: AbstractCoreExtension.cpp  AbstractCoreExtension.h
sub/Extension/src/AbstractExtension/: AbstractExtension.cpp  AbstractExtension.h
sub/Extension/src/AbstractLogic/: AbstractLogic.cpp  AbstractLogic.h
sub/Extension/src/ExtensionManager/: ExtensionManager.h
sub/Extension/src/LibraryCoreFactory/: LibraryCoreFactory.cpp  LibraryCoreFactory.h
sub/Extension/src/LibraryFactory/: LibraryFactory.cpp  LibraryFactory.h
sub/Extension/src/LibraryFactoryManager/: LibraryFactoryManager.cpp  LibraryFactoryManager.h
sub/Extension/src/RTTR/: RTTR.cpp  RTTR.hpp
sub/ExtensionCore/: CMakeLists.txt
sub/ExtensionCore/src/: ExtensionCore_global.h
sub/ExtensionCore/src/AbstractCoreExtension/: AbstractCoreExtension.cpp
sub/ExtensionCore/src/AbstractCoreLogic/: AbstractCoreLogic.cpp  AbstractCoreLogic.h
sub/ExtensionCore/src/AbstractExtension/: AbstractExtension.h
sub/ExtensionCore/src/AbstractLogic/: AbstractLogic.cpp  AbstractLogic.h
sub/ExtensionCore/src/ExtensionManager/: ExtensionManager.cpp  ExtensionManager.h
sub/ExtensionCore/src/LibraryFactoryManager/: LibraryFactoryManager.cpp  LibraryFactoryManager.h
